# Aufgaben-App

./: LICENSE  README.md
Aufgaben-App/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  resource.qrc
